--- a/client/src/pages/Profile/styles.scss
+++ b/client/src/pages/Profile/styles.scss
@@ -1,7 +1,7 @@
 @import "../../variables";
 
 .profile-wrapper {
-  width: 80%;
+  width: 40%;
   height: calc(100vh - 100px);
   padding-top: 5rem;
   margin: 0 auto;
@@ -53,6 +53,7 @@
         position: relative;
         height: 40px;
         width: 300px;
+        margin: 0 auto;
         background: $darkblue;
         border-radius: 20px;
 
